--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-theme: jekyll-theme-dinky
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+  - jekyll-remote-theme
 title: Aiden Young
+css: /assets/css/custom.css
