--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,2 @@
-remote_theme: pages-themes/dinky@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-minimal
 title: Aiden Young
-css: /assets/css/custom.css
