--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-minimal
 title: Aiden Young
+description: Founder & ceo of Orpheus AI, understand nature
+css: /assets/css/custom.css
