--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: Aiden Young
 description: Founder of Orpheus AI, bridging soil science, regenerative, and precision farming.
 css: /assets/css/custom.css
 publications:
-  - title: "Soil Science Innovations 2024"
+  - title: "Social Media, The Democratic Regime, and You"
     url: ""
   - title: "Regenerative Farming Techniques"
     url: ""
