--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 title: Aiden Young
-description: Founder & ceo of Orpheus AI, understand nature
+description: Founder & ceo of Orpheus AI
+understand nature
 css: /assets/css/custom.css
