--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-primer
 title: Aiden Young
 description: Founder & ceo of Orpheus AI
 understand nature
